# rust-kernels

./: .gitignore  README.md
benches/: run_bench.py
benches/cudacpp/: a.out  b1  bench1.cu  bench2.cu  bench2.ptx  bench_results1.txt  bench_results2.txt  test.cu
benches/numba/: bench_results.txt  main.py
benches/rust/: Cargo.toml  bench_results.txt  bench_results_old.txt  gpu64.ll  gpu64.ptx  main.rs  rustc-ice-2025-08-08T23_02_20-725263.txt
benches/rust/.cargo/: config.toml
benches/rust/src/: main.rs
cuda/: Cargo.toml  build.rs
cuda/src/: atom.rs  dmem.rs  engine.rs  gpu.rs  kernel.rs  lib.rs  module.rs  sys.rs
nvjitlink/: Cargo.toml  build.rs
nvjitlink/src/: lib.rs  sys.rs
nvvm-0.1.1/: Cargo.toml  build.rs
nvvm-0.1.1/src/: lib.rs
nvvm-0.2/: Cargo.toml
nvvm-0.2/src/: lib.rs  sys.rs
sample/: Cargo.toml  add2.ll  gpu64.ll  gpu64.ptx
sample/.cargo/: config.toml
sample/src/: main.rs  main.rs.old  main_old
