[package]
name = "rust_kernels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nvvm = { path = "../rust-kernels/nvvm-0.1.1" }
nvjitlink = { path = "../rust-kernels/nvjitlink" }
cuda = { path = "../rust-kernels/cuda" }

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]