[package]
name = "rust_kernels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nvvm = { path = "../../nvvm-0.2" }
nvjitlink = { path = "../../nvjitlink" }
cuda = { path = "../../cuda" }

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[profile.release]
opt-level = 3
lto = true